backstory and motivation

--- a/genindex.html
+++ b/genindex.html
@@ -82,6 +82,7 @@
  | <a href="#D"><strong>D</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
@@ -116,6 +117,8 @@
       <li><a href="core.html#tlang.core.Cached.__init__">__init__() (Cached method)</a>
 
       <ul>
+        <li><a href="core.html#tlang.core.CachedParse.__init__">(CachedParse method)</a>
+</li>
         <li><a href="core.html#tlang.core.Combinator.__init__">(Combinator method)</a>
 </li>
         <li><a href="core.html#tlang.core.FromProcessor.__init__">(FromProcessor method)</a>
@@ -173,9 +176,9 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="core.html#tlang.core.Cached.cache_process">cache_process() (Cached method)</a>
-</li>
       <li><a href="core.html#tlang.core.Cached">Cached (class in tlang.core)</a>
+</li>
+      <li><a href="core.html#tlang.core.CachedParse">CachedParse (class in tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.clear_visit_cache">clear_visit_cache() (in module tlang.core)</a>
 </li>
@@ -197,8 +200,6 @@
         <li><a href="core.html#tlang.core.Concatenation.composition">(Concatenation method)</a>
 </li>
       </ul></li>
-      <li><a href="core.html#tlang.core.Transpiler.compT">compT() (Transpiler method)</a>
-</li>
       <li><a href="core.html#tlang.core.Concatenation">Concatenation (class in tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.contextfree">contextfree() (in module tlang.core)</a>
@@ -229,10 +230,6 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="core.html#tlang.core.find_transformations">find_transformations() (in module tlang.core)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core.html#tlang.core.FromProcessor">FromProcessor (class in tlang.core)</a>
 </li>
   </ul></td>
@@ -254,12 +251,16 @@
   </ul></td>
 </tr></table>
 
-<h2 id="I">I</h2>
+<h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="core.html#tlang.core.InfiniteLoop">InfiniteLoop</a>
+      <li><a href="core.html#tlang.core.HashDict">HashDict (class in tlang.core)</a>
 </li>
   </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core.html#tlang.core.Transpiler.inv">inv() (Transpiler method)</a>
 </li>
@@ -398,12 +399,14 @@
         <li><a href="core.html#tlang.core.Transpiler.reset">(Transpiler method)</a>
 </li>
       </ul></li>
-      <li><a href="core.html#tlang.core.Cached.return_cache">return_cache() (Cached method)</a>
-</li>
       <li><a href="core.html#tlang.core.roundrobin">roundrobin() (in module tlang.core)</a>
 </li>
-      <li><a href="core.html#tlang.core.Transpiler.run">run() (Transpiler method)</a>
+      <li><a href="core.html#tlang.core.CachedParse.run">run() (CachedParse method)</a>
+
+      <ul>
+        <li><a href="core.html#tlang.core.Transpiler.run">(Transpiler method)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -428,12 +431,16 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="core.html#tlang.core.Transpiler.T">T() (Transpiler method)</a>
+</li>
       <li><a href="core.html#tlang.core.Template">Template (class in tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.Terminal">Terminal (class in tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.test">test() (in module tlang.core)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     tlang.core
 
@@ -441,8 +448,6 @@
         <li><a href="core.html#module-tlang.core">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core.html#tlang.core.Transpiler">Transpiler (class in tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.transpiler">transpiler() (in module tlang.core)</a>
