--- a/genindex.html
+++ b/genindex.html
@@ -106,17 +106,21 @@
         <li><a href="core.html#tlang.core.Transpiler.__add__">(Transpiler method)</a>
 </li>
       </ul></li>
-      <li><a href="core.html#tlang.core.Cached.__call__">__call__() (Cached method)</a>
+      <li><a href="core.html#tlang.core.Alteration.__call__">__call__() (Alteration method)</a>
 
       <ul>
+        <li><a href="core.html#tlang.core.Cached.__call__">(Cached method)</a>
+</li>
         <li><a href="core.html#tlang.core.Transpiler.__call__">(Transpiler method)</a>
 </li>
       </ul></li>
       <li><a href="core.html#tlang.core.Transpiler.__getitem__">__getitem__() (Transpiler method)</a>
 </li>
-      <li><a href="core.html#tlang.core.Cached.__init__">__init__() (Cached method)</a>
+      <li><a href="core.html#tlang.core.Alteration.__init__">__init__() (Alteration method)</a>
 
       <ul>
+        <li><a href="core.html#tlang.core.Cached.__init__">(Cached method)</a>
+</li>
         <li><a href="core.html#tlang.core.CachedParse.__init__">(CachedParse method)</a>
 </li>
         <li><a href="core.html#tlang.core.Combinator.__init__">(Combinator method)</a>
@@ -238,12 +242,22 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="core.html#tlang.core.Completed.gen">gen() (Completed method)</a>
+
+      <ul>
+        <li><a href="core.html#tlang.core.PEGAlteration.gen">(PEGAlteration method)</a>
+</li>
+        <li><a href="core.html#tlang.core.Terminal.gen">(Terminal method)</a>
+</li>
+        <li><a href="core.html#tlang.core.Transpiler.gen">(Transpiler method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core.html#tlang.core.Transpiler.get_init_context">get_init_context() (Transpiler method)</a>
 </li>
       <li><a href="core.html#tlang.core.get_scoped">get_scoped() (in module tlang.core)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core.html#tlang.core.Greedy">Greedy (class in tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.greedy">greedy() (in module tlang.core)</a>
@@ -417,13 +431,15 @@
 </li>
       <li><a href="core.html#tlang.core.Transpiler.set_init_context">set_init_context() (Transpiler method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core.html#tlang.core.Link.set_parser">set_parser() (Link method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core.html#tlang.core.set_scoped">set_scoped() (in module tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.stitch">stitch() (in module tlang.core)</a>
+</li>
+      <li><a href="core.html#tlang.core.Alteration.switch">switch() (Alteration method)</a>
 </li>
   </ul></td>
 </tr></table>
