--- a/genindex.html
+++ b/genindex.html
@@ -347,6 +347,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="core.html#tlang.core.PEGAlteration">PEGAlteration (class in tlang.core)</a>
 </li>
+      <li><a href="core.html#tlang.core.pgreedy">pgreedy() (in module tlang.core)</a>
+</li>
       <li><a href="core.html#tlang.core.Placeholder">Placeholder (class in tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.Alteration.process">process() (Alteration method)</a>
