--- a/genindex.html
+++ b/genindex.html
@@ -397,6 +397,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="core.html#tlang.core.Transpiler.replace">replace() (Transpiler method)</a>
+</li>
       <li><a href="core.html#tlang.core.Reset">Reset (class in tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.reset">reset() (in module tlang.core)</a>
