--- a/genindex.html
+++ b/genindex.html
@@ -184,6 +184,8 @@
 </li>
       <li><a href="core.html#tlang.core.CachedParse">CachedParse (class in tlang.core)</a>
 </li>
+      <li><a href="core.html#tlang.core.clean_links">clean_links() (in module tlang.core)</a>
+</li>
       <li><a href="core.html#tlang.core.clear_visit_cache">clear_visit_cache() (in module tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.Combinator">Combinator (class in tlang.core)</a>
@@ -192,10 +194,10 @@
 </li>
       <li><a href="core.html#tlang.core.Transpiler.complete">complete() (Transpiler method)</a>
 </li>
-      <li><a href="core.html#tlang.core.Completed">Completed (class in tlang.core)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="core.html#tlang.core.Completed">Completed (class in tlang.core)</a>
+</li>
       <li><a href="core.html#tlang.core.Composed">Composed (class in tlang.core)</a>
 </li>
       <li><a href="core.html#tlang.core.Composed.composition">composition() (Composed method)</a>
