--- a/_modules/tlang/core.html
+++ b/_modules/tlang/core.html
@@ -428,7 +428,7 @@
 <div class="viewcode-block" id="Transpiler.recur"><a class="viewcode-back" href="../../core.html#tlang.core.Transpiler.recur">[docs]</a>    <span class="k">def</span> <span class="nf">recur</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">f</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Build a new transpiler from the result of recursively applying a</span>
 <span class="sd">        function to all the transpilers that comprise this one.&quot;&quot;&quot;</span>
-        <span class="n">transformations</span> <span class="o">=</span> <span class="n">HashDict</span><span class="p">({})</span>
+        <span class="n">transformations</span> <span class="o">=</span> <span class="n">HashDict</span><span class="p">()</span>
         <span class="n">new</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_recur</span><span class="p">(</span><span class="n">f</span><span class="p">,</span> <span class="n">transformations</span><span class="p">)</span>
         <span class="n">update_links</span><span class="p">(</span><span class="n">transformations</span><span class="p">)</span>
         <span class="n">reset</span><span class="p">(</span><span class="n">new</span><span class="p">)</span>
@@ -462,7 +462,7 @@
 <span class="sd">    Returns:</span>
 <span class="sd">        dict: map from placeholder identifiers to properly linked parsers&quot;&quot;&quot;</span>
     <span class="n">link_lookup</span> <span class="o">=</span> <span class="p">{</span><span class="n">key</span><span class="p">:</span> <span class="n">Link</span><span class="p">(</span><span class="n">value</span><span class="p">)</span> <span class="k">for</span> <span class="n">key</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">lookup</span><span class="o">.</span><span class="n">items</span><span class="p">()}</span>
-    <span class="n">transformations</span> <span class="o">=</span> <span class="n">HashDict</span><span class="p">({})</span>
+    <span class="n">transformations</span> <span class="o">=</span> <span class="n">HashDict</span><span class="p">()</span>
     <span class="c1"># similar sequence to recur</span>
     <span class="n">lookup</span> <span class="o">=</span> <span class="p">{</span>
         <span class="n">key</span><span class="p">:</span> <span class="n">value</span><span class="o">.</span><span class="n">_recur</span><span class="p">(</span>
@@ -479,7 +479,31 @@
     <span class="c1"># Now we can reinitialize</span>
     <span class="k">for</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">lookup</span><span class="o">.</span><span class="n">values</span><span class="p">():</span>
         <span class="n">reset</span><span class="p">(</span><span class="n">value</span><span class="p">)</span>
-    <span class="k">return</span> <span class="n">lookup</span></div>
+    <span class="c1"># clean up unnecessary links</span>
+    <span class="k">return</span> <span class="p">{</span><span class="n">key</span><span class="p">:</span> <span class="n">clean_links</span><span class="p">(</span><span class="n">value</span><span class="p">)</span> <span class="k">for</span> <span class="n">key</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">lookup</span><span class="o">.</span><span class="n">items</span><span class="p">()}</span></div>
+
+
+<div class="viewcode-block" id="clean_links"><a class="viewcode-back" href="../../core.html#tlang.core.clean_links">[docs]</a><span class="k">def</span> <span class="nf">clean_links</span><span class="p">(</span><span class="n">t</span><span class="p">):</span>
+    <span class="c1"># remove links</span>
+    <span class="n">seen</span> <span class="o">=</span> <span class="nb">set</span><span class="p">()</span>
+
+    <span class="nd">@_lru_cache</span><span class="p">(</span><span class="kc">None</span><span class="p">)</span>
+    <span class="k">def</span> <span class="nf">eliminate_link</span><span class="p">(</span><span class="n">parser</span><span class="p">):</span>
+        <span class="n">id_</span> <span class="o">=</span> <span class="nb">id</span><span class="p">(</span><span class="n">parser</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">id_</span> <span class="ow">in</span> <span class="n">seen</span><span class="p">:</span>
+            <span class="k">return</span> <span class="n">Link</span><span class="p">(</span><span class="n">parser</span><span class="p">)</span>
+        <span class="n">seen</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">id_</span><span class="p">)</span>
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">parser</span><span class="p">,</span> <span class="n">Combinator</span><span class="p">):</span>
+            <span class="n">children</span> <span class="o">=</span> <span class="nb">tuple</span><span class="p">(</span><span class="nb">map</span><span class="p">(</span><span class="n">eliminate_link</span><span class="p">,</span> <span class="n">parser</span><span class="o">.</span><span class="n">args</span><span class="p">[</span><span class="mi">0</span><span class="p">]))</span>
+            <span class="n">parser</span><span class="o">.</span><span class="n">args</span> <span class="o">=</span> <span class="p">(</span><span class="n">children</span><span class="p">,</span> <span class="o">*</span><span class="n">parser</span><span class="o">.</span><span class="n">args</span><span class="p">[</span><span class="mi">1</span><span class="p">:])</span>
+            <span class="k">return</span> <span class="n">parser</span>
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">parser</span><span class="p">,</span> <span class="n">Wrapper</span><span class="p">):</span>
+            <span class="n">child</span> <span class="o">=</span> <span class="n">eliminate_link</span><span class="p">(</span><span class="n">parser</span><span class="o">.</span><span class="n">args</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span>
+            <span class="n">parser</span><span class="o">.</span><span class="n">args</span> <span class="o">=</span> <span class="p">(</span><span class="n">child</span><span class="p">,</span> <span class="o">*</span><span class="n">parser</span><span class="o">.</span><span class="n">args</span><span class="p">[</span><span class="mi">1</span><span class="p">:])</span>
+            <span class="k">return</span> <span class="n">parser</span>
+        <span class="k">return</span> <span class="n">parser</span>
+
+    <span class="k">return</span> <span class="n">eliminate_link</span><span class="p">(</span><span class="n">t</span><span class="p">)</span></div>
 
 
 <div class="viewcode-block" id="update_links"><a class="viewcode-back" href="../../core.html#tlang.core.update_links">[docs]</a><span class="k">def</span> <span class="nf">update_links</span><span class="p">(</span><span class="n">transformations</span><span class="p">):</span>
@@ -958,6 +982,12 @@
 <div class="viewcode-block" id="Link.set_parser"><a class="viewcode-back" href="../../core.html#tlang.core.Link.set_parser">[docs]</a>    <span class="k">def</span> <span class="nf">set_parser</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">parser</span><span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">parser</span> <span class="o">=</span> <span class="n">parser</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">args</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">=</span> <span class="n">parser</span></div>
+
+    <span class="k">def</span> <span class="fm">__eq__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">other</span><span class="p">):</span>
+        <span class="k">return</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__eq__</span><span class="p">(</span><span class="n">other</span><span class="p">)</span> <span class="ow">or</span> <span class="bp">self</span><span class="o">.</span><span class="n">parser</span> <span class="o">==</span> <span class="n">other</span>
+
+    <span class="k">def</span> <span class="fm">__hash__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="k">return</span> <span class="nb">id</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span>
 
     <span class="nd">@_lru_cache</span><span class="p">(</span><span class="kc">None</span><span class="p">)</span>
     <span class="k">def</span> <span class="nf">_recur</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">f</span><span class="p">,</span> <span class="n">transformations</span><span class="p">):</span>
